--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 /*----------Header------------*/
 
 #header {
-	background: #3001fb;
+	background: #135589;
 	border-bottom: 5px solid #efefef;
 	color: #fff;
 	height: 30px;
